{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 11,
  "lineage": "8a49cb2e-5ce7-a4d7-b98d-45e4933a8dfb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "intech_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a4942b8fcc1f29d",
            "arn": "arn:aws:ec2:us-east-1:637423621869:instance/i-0be412366a744a197",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be412366a744a197",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "CM_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03a2ce7ca9c4cd9ce",
            "private_dns": "ip-10-0-1-236.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.236",
            "public_ip": "3.84.205.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d90656634a0c73a0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0265ac09c56d9b1ae",
            "tags": {
              "Name": "intech-ubuntu-instance"
            },
            "tags_all": {
              "Name": "intech-ubuntu-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ce34197cd1f59283"
            ]
          },
          "dependencies": [
            "aws_security_group.intech_sg",
            "aws_subnet.intech_public_subnet",
            "aws_vpc.intech_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "intech_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423621869:internet-gateway/igw-04d1b1537e28fd1c0",
            "id": "igw-04d1b1537e28fd1c0",
            "owner_id": "637423621869",
            "tags": {
              "Name": "intech-igw"
            },
            "tags_all": {
              "Name": "intech-igw"
            },
            "vpc_id": "vpc-0da9974e640661fe5"
          },
          "dependencies": [
            "aws_vpc.intech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intech_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423621869:route-table/rtb-007339d9b46986346",
            "id": "rtb-007339d9b46986346",
            "owner_id": "637423621869",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d1b1537e28fd1c0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "intech-public-rt"
            },
            "tags_all": {
              "Name": "intech-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da9974e640661fe5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.intech_igw",
            "aws_vpc.intech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intech_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e71f530c6059e17",
            "route_table_id": "rtb-007339d9b46986346",
            "subnet_id": "subnet-0265ac09c56d9b1ae"
          },
          "dependencies": [
            "aws_internet_gateway.intech_igw",
            "aws_route_table.intech_public_rt",
            "aws_subnet.intech_public_subnet",
            "aws_vpc.intech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "intech_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423621869:security-group/sg-0ce34197cd1f59283",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce34197cd1f59283",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240910130346576700000001",
            "name_prefix": "terraform-",
            "owner_id": "637423621869",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "intech-sg"
            },
            "tags_all": {
              "Name": "intech-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da9974e640661fe5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.intech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intech_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423621869:subnet/subnet-0265ac09c56d9b1ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0265ac09c56d9b1ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423621869",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "intech-public-subnet"
            },
            "tags_all": {
              "Name": "intech-public-subnet"
            },
            "vpc_id": "vpc-0da9974e640661fe5"
          },
          "dependencies": [
            "aws_vpc.intech_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "intech_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423621869:vpc/vpc-0da9974e640661fe5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ca33982856fd4695",
            "default_route_table_id": "rtb-051333545af9d61ca",
            "default_security_group_id": "sg-062c4274331da1224",
            "dhcp_options_id": "dopt-07bf0b6f149bde6ac",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0da9974e640661fe5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-051333545af9d61ca",
            "owner_id": "637423621869",
            "tags": {
              "Name": "intech-vpc"
            },
            "tags_all": {
              "Name": "intech-vpc"
            }
          }
        }
      ]
    }
  ]
}